--- a/list.html
+++ b/list.html
@@ -10,8 +10,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>index.html</title>
 </head>
+
 
 <body>
     <!-- Optional JavaScript -->
@@ -27,49 +28,142 @@
         crossorigin="anonymous"></script>
 
 
-    <!-- HEADER -->
-    <div class="header">
-        <!-- NAVBAR -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="index.html">Patitas</a>
+    <!-- NAVBAR -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="catalogo.html">Patitas</a>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Dropdown
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="list.html">Catálogo</a>
-                            <a class="dropdown-item" href="ficha.html">Ficha</a>
-                            <a class="dropdown-item" href="newAnimal.html">Registro</a>
-                    </li>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="catalogo.html">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Dropdown
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="list.html">Catálogo</a>
+                        <a class="dropdown-item" href="ficha.html">Ficha</a>
+                        <a class="dropdown-item" href="newAnimal.html">Registro</a>
+                </li>
 
-                </ul>
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>
-                <button class="LogIn btn btn-outline-primary btn-sm my-2 my-sm-0 margin-left" type="submit">LogIn -
-                    Register</button>
-            </div>
-        </nav>
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
+            <button class="LogIn btn btn-outline-primary btn-sm my-2 my-sm-0 margin-left" type="submit">LogIn -
+                Register</button>
+        </div>
+    </nav>
+
+    <div class="jumbotron">
+        <div class="container text-Left">
+            <p class="h1 text-primary">
+                I am looking for friend!</p>
+            <p class="h6">This is a template for a simple marketing or informational website. This is a template for a
+                simple marketing or informational website. This is a template for a simple marketing or informational
+                wplate for a simple marketing or informational
+                website. This is a template for a simple marketing or informational website. This is a template for a
+                simple marketing or informational website. This is a template for a simple marketing or informational
+                website. This is a template for a simple marketing or informational website. This is a template for a
+                simple marketing or informational website. </p>
+            <button type="button" class="btn btn-primary">Learn more >></button>
+
+        </div>
+    </div>
+
+    <div class="tier">
+        <h2 class="txt txt_h1 m-txt_tight m-txt_colorPrimary m-txt_alignCenter">
+            Pets Available for Adoption
+        </h2>
+
+        <p class="txt m-txt_bold m-txt_colorPrimaryS1 m-txt_alignCenter u-vr4x"></p>
     </div>
 
 
+    <div class="container">
+        <div class="row justify-content-md-center">
+            <div class="col-sm-3 m-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="assets/dog_02.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-3 m-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="assets/dog_02.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-3 m-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="assets/dog_02.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-3 m-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="assets/dog_01.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-3 m-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="assets/dog_01.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-3 m-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="assets/dog_01.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <footer>
-        <p>Posted by: Luis Besil</p>
-        <p>Contact information: <a href="mailto:l.besil@gmail.com">
-                l.besil@gmail.com</a></p>
+        <div class=footer>
+            <p>Posted by: Luis Besil</p>
+            <p>Contact information: <a href="mailto:l.besil@gmail.com">
+                    l.besil@gmail.com</a></p>
     </footer>
+    </div>
 
 </body>
 
