imagenes de animales

--- a/catalogo.html
+++ b/catalogo.html
@@ -38,10 +38,10 @@
                     <a class="nav-link" href="catalogo.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href="animal.html">Link</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                    <a class="nav-link dropdown-toggle" href="animal.html" id="navbarDropdown" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Dropdown
                     </a>
@@ -95,7 +95,7 @@
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="animal.html" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
             </div>
@@ -106,7 +106,7 @@
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="animal.html" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
             </div>
@@ -117,7 +117,7 @@
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="animal.html" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
             </div>
@@ -128,7 +128,7 @@
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="animal.html" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
             </div>
@@ -139,7 +139,7 @@
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="animal.html" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
             </div>
@@ -150,7 +150,7 @@
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="animal.html" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
             </div>
