--- a/animal.html
+++ b/animal.html
@@ -63,6 +63,22 @@
         </nav>
     </div>
 
+    <!-- Ficha -->
+
+
+    <div class="container">
+        <div class="row justify-content-start">
+            <div class="col-4">
+                One of two columns
+            </div>
+        </div>
+        <div class="row justify-content-end">
+            <div class="col-4">
+                One of two columns
+            </div>
+        </div>
+    </div>
+
 
 
     <footer>
