--- a/animal.html
+++ b/animal.html
@@ -63,29 +63,131 @@
         </nav>
     </div>
 
-    <!-- Ficha -->
+    <!-- Ficha - Carrusel -->
 
 
     <div class="container">
         <div class="row justify-content-start">
-            <div class="col-4">
-                One of two columns
+            <div class="col-7">
+                <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="assets/carr_01.jpg" alt="First slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="assets/carr_02.jpg" alt="Second slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="assets/carr_03.jpg" alt="Third slide">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+
+            </div>
+            <div class="col-5">
+
+
+                <!-- Card -->
+                <div class="card promoting-card">
+
+                    <!-- Card content -->
+                    <div class="card-body d-flex flex-row">
+
+                        <!-- Avatar -->
+                        <img src="assets/dog_10.jpg" class="rounded-circle mr-3" height="50px" width="50px"
+                            alt="avatar">
+
+                        <!-- Content -->
+                        <div>
+
+                            <!-- Title -->
+                            <h4 class="card-title font-weight-bold mb-2">Nombre: Doki</h4>
+                            <!-- Subtitle -->
+                            <p class="card-text"><i class="far fa-clock pr-2"></i>Birthday: 21/04/2019</p>
+
+                        </div>
+
+                    </div>
+
+                    <!-- Card -->
+                    <div class="card booking-card">
+
+                        <!-- Card image -->
+                        <div class="view overlay">
+                            <img class="card-img-top" src="assets/dog_10.jpg" alt="Card image cap">
+                            <a href="#!">
+                                <div class="mask rgba-white-slight"></div>
+                            </a>
+                        </div>
+
+                        <!-- Card content -->
+                        <div class="card-body">
+
+                            <!-- Title -->
+                            <h4 class="card-title font-weight-bold"><a>Tipo: Bulldog Francés</a></h4>
+                            <!-- Data -->
+                            <hr class="my-4">
+                            <ul class="">
+                                <li class="">Color de pelo</li>
+                                <li class="">Color de ojos</li>
+
+                            </ul>
+
+                            <hr class="my-4">
+                            <p class="lead"><strong>Descripción</strong></p>
+                            <ul class="list-unstyled list-inline d-flex justify-content-between mb-0">
+                                <li class="list-inline-item">
+
+                                    <p class="text-muted">There are many variations of passages of Lorem Ipsum
+                                        available, but the majority have suffered alteration in some form, by injected
+                                        humour, or randomised words which don't look even slightly believable. </p>
+                                </li>
+                            </ul>
+                            <hr class="my-4">
+                            <p class="lead"><strong>Datos del Contacto</strong></p>
+                            <ul class="">
+                                <li class="">Nombre<i class=""> </i></li>
+                                <li class="">Telefono<i class=""></i></li>
+                                <li class="">Email<i class=""></i></li>
+                               
+                            </ul>
+                            <button type="button" class="btn btn-info">Contactar</button>
+                            <hr class="my-4">
+                            <p class="lead"><strong>Barrio: La Comercial</strong></p>
+                            <hr class="my-4">
+                            <!-- Button -->
+                            <a href="#" class="btn btn-flat deep-purple-text p-1 mx-0 mb-0">Adoptar</a>
+
+                        </div>
+
+                    </div>
+                    <!-- Card -->
+
+                </div>
             </div>
         </div>
-        <div class="row justify-content-end">
-            <div class="col-4">
-                One of two columns
-            </div>
-        </div>
-    </div>
 
 
 
-    <footer>
-        <p>Posted by: Luis Besil</p>
-        <p>Contact information: <a href="mailto:l.besil@gmail.com">
-                l.besil@gmail.com</a></p>
-    </footer>
+
+
+
+
+
+
+        <footer>
+            <p>Posted by: Luis Besil</p>
+            <p>Contact information: <a href="mailto:l.besil@gmail.com">
+                    l.besil@gmail.com</a></p>
+        </footer>
 
 </body>
 
