--- a/animal.html
+++ b/animal.html
@@ -66,9 +66,9 @@
     <!-- Ficha - Carrusel -->
 
 
-    <div class="container">
+    <div class="container margin:auto">
         <div class="row justify-content-start">
-            <div class="col-7">
+            <div class="col col-7">
                 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
@@ -92,7 +92,7 @@
                 </div>
 
             </div>
-            <div class="col-5">
+            <div class="col col-5">
 
 
                 <!-- Card -->
@@ -129,7 +129,7 @@
                         </div>
 
                         <!-- Card content -->
-                        <div class="card-body">
+                        <div class="card-body p-3 mb-2 bg-light text-dark">
 
                             <!-- Title -->
                             <h4 class="card-title font-weight-bold"><a>Tipo: Bulldog Francés</a></h4>
@@ -153,19 +153,17 @@
                             </ul>
                             <hr class="my-4">
                             <p class="lead"><strong>Datos del Contacto</strong></p>
-                            <ul class="">
-                                <li class="">Nombre<i class=""> </i></li>
-                                <li class="">Telefono<i class=""></i></li>
-                                <li class="">Email<i class=""></i></li>
-                               
+                            <ul class=".bg-light">
+                                <li class=".bg-light">Nombre<i class=""> </i></li>
+                                <li class=".bg-light">Telefono<i class=""></i></li>
+                                <li class=".bg-light">Email<i class=""></i></li>                               
                             </ul>
                             <button type="button" class="btn btn-info">Contactar</button>
                             <hr class="my-4">
                             <p class="lead"><strong>Barrio: La Comercial</strong></p>
                             <hr class="my-4">
                             <!-- Button -->
-                            <a href="#" class="btn btn-flat deep-purple-text p-1 mx-0 mb-0">Adoptar</a>
-
+                            <button type="button" class="btn btn-success btn-block btn">Adoptar</button>
                         </div>
 
                     </div>
