--- a/animal.html
+++ b/animal.html
@@ -31,12 +31,12 @@
     <div class="header">
         <!-- NAVBAR -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="index.html">Patitas</a>
+            <a class="navbar-brand" href="animal.html">Patitas</a>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="animal.html">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Link</a>
@@ -47,8 +47,8 @@
                             Dropdown
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="list.html">Catálogo</a>
-                            <a class="dropdown-item" href="ficha.html">Ficha</a>
+                            <a class="dropdown-item" href="Catalogo.html">Catálogo</a>
+                            <a class="dropdown-item" href="animal.html">Animal</a>
                             <a class="dropdown-item" href="newAnimal.html">Registro</a>
                     </li>
 
@@ -156,7 +156,7 @@
                             <ul class=".bg-light">
                                 <li class=".bg-light">Nombre<i class=""> </i></li>
                                 <li class=".bg-light">Telefono<i class=""></i></li>
-                                <li class=".bg-light">Email<i class=""></i></li>                               
+                                <li class=".bg-light">Email<i class=""></i></li>
                             </ul>
                             <button type="button" class="btn btn-info">Contactar</button>
                             <hr class="my-4">
