--- a/list.html
+++ b/list.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>index.html</title>
+    <title>list.html</title>
 </head>
 
 
@@ -38,10 +38,10 @@
                     <a class="nav-link" href="catalogo.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href="animal.html">Link</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                    <a class="nav-link dropdown-toggle" href="animal.html" id="navbarDropdown" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Dropdown
                     </a>
@@ -90,67 +90,67 @@
         <div class="row justify-content-md-center">
             <div class="col-sm-3 m-3">
                 <div class="card" style="width: 18rem;">
-                    <img src="assets/dog_02.jpg" class="card-img-top" alt="...">
+                    <img src="assets/dog_10.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="animal.html" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
             </div>
             <div class="col-sm-3 m-3">
                 <div class="card" style="width: 18rem;">
-                    <img src="assets/dog_02.jpg" class="card-img-top" alt="...">
+                    <img src="assets/dog_06.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="animal.html" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
             </div>
             <div class="col-sm-3 m-3">
                 <div class="card" style="width: 18rem;">
-                    <img src="assets/dog_02.jpg" class="card-img-top" alt="...">
+                    <img src="assets/dog_07.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="animal.html" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
             </div>
             <div class="col-sm-3 m-3">
                 <div class="card" style="width: 18rem;">
-                    <img src="assets/dog_01.jpg" class="card-img-top" alt="...">
+                    <img src="assets/dog_11.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="animal.html" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
             </div>
             <div class="col-sm-3 m-3">
                 <div class="card" style="width: 18rem;">
-                    <img src="assets/dog_01.jpg" class="card-img-top" alt="...">
+                    <img src="assets/dog_08.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="animal.html" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
             </div>
             <div class="col-sm-3 m-3">
                 <div class="card" style="width: 18rem;">
-                    <img src="assets/dog_01.jpg" class="card-img-top" alt="...">
+                    <img src="assets/dog_09.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="animal.html" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
             </div>
