--- a/newAnimal.html
+++ b/newAnimal.html
@@ -10,8 +10,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>newAnimal.html</title>
+    <title>list.html</title>
 </head>
+
 
 <body>
     <!-- Optional JavaScript -->
@@ -26,6 +27,53 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 
+
+    <!-- NAVBAR -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="list.html">Patitas</a>
+    
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="list.html">Home <span class="sr-only"></span></a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="newAnimal.html">Nuevo <span class="sr-only"></span></a>
+                    </li>
+                </ul>
+                <form class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </form>
+                <button class="LogIn btn btn-outline-primary btn-sm my-2 my-sm-0 margin-left" type="submit">LogIn -
+                    Register
+                </button>
+            </div>
+        </nav>
+
+    <div class="jumbotron">
+        <div class="container text-Left">
+            <p class="h1 text-primary">
+                I am looking for friend!</p>
+            <p class="h6">This is a template for a simple marketing or informational website. This is a template for a
+                simple marketing or informational website. This is a template for a simple marketing or informational
+                wplate for a simple marketing or informational
+                website. This is a template for a simple marketing or informational website. This is a template for a
+                simple marketing or informational website. This is a template for a simple marketing or informational
+                website. This is a template for a simple marketing or informational website. This is a template for a
+                simple marketing or informational website. </p>
+            <button type="button" class="btn btn-primary">Learn more >></button>
+
+        </div>
+    </div>
+
+    <div class="tier">
+        <h2 class="txt txt_h1 m-txt_tight m-txt_colorPrimary m-txt_alignCenter">
+            Pets Available for Adoption
+        </h2>
+
+        <p class="txt m-txt_bold m-txt_colorPrimaryS1 m-txt_alignCenter u-vr4x"></p>
+    </div>
 
 
 </body>
