--- a/list.html
+++ b/list.html
@@ -86,7 +86,7 @@
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
-                        <a href="animal.html" class="btn btn-primary">Go somewhere</a>
+                        <a href="animal.html" class="btn btn-primary">Ver</a>
                     </div>
                 </div>
             </div>
@@ -97,7 +97,7 @@
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
-                        <a href="animal.html" class="btn btn-primary">Go somewhere</a>
+                        <a href="animal.html" class="btn btn-primary">Ver</a>
                     </div>
                 </div>
             </div>
@@ -108,7 +108,7 @@
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
-                        <a href="animal.html" class="btn btn-primary">Go somewhere</a>
+                        <a href="animal.html" class="btn btn-primary">Ver</a>
                     </div>
                 </div>
             </div>
@@ -119,7 +119,7 @@
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
-                        <a href="animal.html" class="btn btn-primary">Go somewhere</a>
+                        <a href="animal.html" class="btn btn-primary">Ver</a>
                     </div>
                 </div>
             </div>
@@ -130,7 +130,7 @@
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
-                        <a href="animal.html" class="btn btn-primary">Go somewhere</a>
+                        <a href="animal.html" class="btn btn-primary">Ver</a>
                     </div>
                 </div>
             </div>
@@ -141,7 +141,7 @@
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
-                        <a href="animal.html" class="btn btn-primary">Go somewhere</a>
+                        <a href="animal.html" class="btn btn-primary">Ver</a>
                     </div>
                 </div>
             </div>
