Cambios en registrer

--- a/list.html
+++ b/list.html
@@ -46,9 +46,9 @@
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
-            <button class="LogIn btn btn-outline-primary btn-sm my-2 my-sm-0 margin-left" type="submit">LogIn -
-                Register
-            </button>
+
+            <a href="register.html" class="LogIn btn btn-outline-primary btn-sm my-2 my-sm-0 margin-left" role="button"
+                aria-pressed="true">LogIn - Register</a>
         </div>
     </nav>
 
