cambios en lista

--- a/list.html
+++ b/list.html
@@ -69,92 +69,113 @@
     </div>
 
     <div class="tier">
-        <h2 class="txt txt_h1 m-txt_tight m-txt_colorPrimary m-txt_alignCenter">
+        <h2 class="txt m-txt_tight m-txt_colorPrimary">
             Pets Available for Adoption
         </h2>
-
-        <p class="txt m-txt_bold m-txt_colorPrimaryS1 m-txt_alignCenter u-vr4x"></p>
     </div>
 
 
-    <div class="container">
-        <div class="row justify-content-md-center">
-            <div class="col-sm-3 m-3">
-                <div class="card" style="width: 18rem;">
-                    <img src="assets/dog_10.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="animal.html" class="btn btn-primary">Ver</a>
+    <div class="container-fluid">
+        <div class="row flecx-xl-nowrap">
+            <div class="col col-md-1">
+                sadfsdaf
+            </div>
+            <div class="col col-md-10">
+                <div class="row justify-content-md-center">
+                    <div class="col-sm-3 m-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="assets/dog_10.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk
+                                    of
+                                    the card's content.</p>
+                                <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-3 m-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="assets/dog_06.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk
+                                    of
+                                    the card's content.</p>
+                                <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-3 m-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="assets/dog_07.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk
+                                    of
+                                    the card's content.</p>
+                                <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-3 m-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="assets/dog_11.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk
+                                    of
+                                    the card's content.</p>
+                                <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-3 m-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="assets/dog_08.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk
+                                    of
+                                    the card's content.</p>
+                                <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-3 m-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="assets/dog_09.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk
+                                    of
+                                    the card's content.</p>
+                                <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-sm-3 m-3">
-                <div class="card" style="width: 18rem;">
-                    <img src="assets/dog_06.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="animal.html" class="btn btn-primary">Ver</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-3 m-3">
-                <div class="card" style="width: 18rem;">
-                    <img src="assets/dog_07.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="animal.html" class="btn btn-primary">Ver</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-3 m-3">
-                <div class="card" style="width: 18rem;">
-                    <img src="assets/dog_11.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="animal.html" class="btn btn-primary">Ver</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-3 m-3">
-                <div class="card" style="width: 18rem;">
-                    <img src="assets/dog_08.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="animal.html" class="btn btn-primary">Ver</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-3 m-3">
-                <div class="card" style="width: 18rem;">
-                    <img src="assets/dog_09.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="animal.html" class="btn btn-primary">Ver</a>
-                    </div>
-                </div>
+            <div class="col col-md-1">
+                asdf
             </div>
         </div>
     </div>
 
+
+    <!--FOOTER-->
     <footer>
         <div class=footer>
             <p>Posted by: Luis Besil</p>
             <p>Contact information: <a href="mailto:l.besil@gmail.com">
                     l.besil@gmail.com</a></p>
     </footer>
-    </div>
 
 </body>
 
