--- a/list.html
+++ b/list.html
@@ -76,17 +76,18 @@
 
 
     <div class="container-fluid">
-        <div class="row flecx-xl-nowrap">
-            <div class="col col-md-1">
-                sadfsdaf
+        <div class="row m-3 justify-content-start">
+            <div class="serchVertical col col-md-2">
+                dfgdfg dfg fdsg dfg sdfg fdg sdfg sdfgd fgdfg dfgfdsg dfg sdfgfdg sdfg sdfgdf gdfgdfg fdsg dfgsdf gfdg
+                sdfg sdfgdf gd fgdf fdsg dfgsdfgfdg sdfg sdfg
             </div>
-            <div class="col col-md-10">
-                <div class="row justify-content-md-center">
-                    <div class="col-sm-3 m-3">
+            <div class="col col-md-center">
+                <div class="row justify-content-between">
+                    <div class="col col-sm-3 m-2">
                         <div class="card" style="width: 18rem;">
                             <img src="assets/dog_10.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
+                                <h5 class="card-title">Max</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the
                                     bulk
                                     of
@@ -95,11 +96,11 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3 m-3">
+                    <div class="col col-sm-3 m-2">
                         <div class="card" style="width: 18rem;">
                             <img src="assets/dog_06.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
+                                <h5 class="card-title">Zeus</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the
                                     bulk
                                     of
@@ -108,11 +109,11 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3 m-3">
+                    <div class="col col-sm-3 m-2">
                         <div class="card" style="width: 18rem;">
                             <img src="assets/dog_07.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
+                                <h5 class="card-title">Clarita</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the
                                     bulk
                                     of
@@ -121,50 +122,13 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3 m-3">
-                        <div class="card" style="width: 18rem;">
-                            <img src="assets/dog_11.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk
-                                    of
-                                    the card's content.</p>
-                                <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-3 m-3">
-                        <div class="card" style="width: 18rem;">
-                            <img src="assets/dog_08.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk
-                                    of
-                                    the card's content.</p>
-                                <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-3 m-3">
-                        <div class="card" style="width: 18rem;">
-                            <img src="assets/dog_09.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk
-                                    of
-                                    the card's content.</p>
-                                <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
-                            </div>
-                        </div>
-                    </div>
+
                 </div>
             </div>
-            <div class="col col-md-1">
-                asdf
-            </div>
+            <div class="serchVerticalR col col-md-2">
+                    dfgdfg dfg fdsg dfg sdfg fdg sdfg sdfgd fgdfg dfgfdsg dfg sdfgfdg sdfg sdfgdf gdfgdfg fdsg dfgsdf gfdg
+                    sdfg sdfgdf gd fgdf fdsg dfgsdfgfdg sdfg sdfg
+                </div>
         </div>
     </div>
 
