--- a/animal.html
+++ b/animal.html
@@ -56,7 +56,7 @@
     <!-- Ficha - Carrusel -->
 
 
-    <div class="container margin:auto">
+    <div class="contCarr container margin:auto">
         <div class="row justify-content-start">
             <div class="col col-7">
                 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
