--- a/list.html
+++ b/list.html
@@ -77,18 +77,18 @@
 
     <div class="container-fluid">
         <div class="row m-3 justify-content-start">
-            <div class="serchVertical col col-md-2">
+            <div class="serchVerticalL col col-md-2">
                 dfgdfg dfg fdsg dfg sdfg fdg sdfg sdfgd fgdfg dfgfdsg dfg sdfgfdg sdfg sdfgdf gdfgdfg fdsg dfgsdf gfdg
                 sdfg sdfgdf gd fgdf fdsg dfgsdfgfdg sdfg sdfg
             </div>
             <div class="col col-md-center">
-                <div class="row justify-content-between">
-                    <div class="col col-sm-3 m-2">
-                        <div class="card" style="width: 18rem;">
+                <div class="row justify-content-around">
+                    <div class="fichaAnimal col col-sm-4">
+                        <div class="card">
                             <img src="assets/dog_10.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Max</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                <p class="card-text">Some quicktitle and make up the
                                     bulk
                                     of
                                     the card's content.</p>
@@ -96,12 +96,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col col-sm-3 m-2">
-                        <div class="card" style="width: 18rem;">
+                    <div class="fichaAnimal col col-sm-4">
+                        <div class="card">
                             <img src="assets/dog_06.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Zeus</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                <p class="card-text">Some quick example tdfdfg dfg dfgdfg dfgfd gext to build on the card title and make up the
                                     bulk
                                     of
                                     the card's content.</p>
@@ -109,8 +109,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col col-sm-3 m-2">
-                        <div class="card" style="width: 18rem;">
+                    <div class="fichaAnimal col col-sm-4">
+                        <div class="card">
                             <img src="assets/dog_07.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Clarita</h5>
@@ -126,9 +126,9 @@
                 </div>
             </div>
             <div class="serchVerticalR col col-md-2">
-                    dfgdfg dfg fdsg dfg sdfg fdg sdfg sdfgd fgdfg dfgfdsg dfg sdfgfdg sdfg sdfgdf gdfgdfg fdsg dfgsdf gfdg
-                    sdfg sdfgdf gd fgdf fdsg dfgsdfgfdg sdfg sdfg
-                </div>
+                dfgdfg dfg fdsg dfg sdfg fdg sdfg sdfgd fgdfg dfgfdsg dfg sdfgfdg sdfg sdfgdf gdfgdfg fdsg dfgsdf gfdg
+                sdfg sdfgdf gd fgdf fdsg dfgsdfgfdg sdfg sdfg
+            </div>
         </div>
     </div>
 
